<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@color/colorBackground">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/cardview_dark_background"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="PrivateResource,UnusedAttribute">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/country_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryText"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Title Cases" />

            <TextView
                android:id="@+id/cases_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimaryText"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@id/recovers_title_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/country_name_tv"
                android:text="@string/cases_title" />

            <TextView
                android:id="@+id/recovers_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimaryText"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@id/deaths_title_tv"
                app:layout_constraintStart_toEndOf="@id/cases_title_tv"
                app:layout_constraintTop_toBottomOf="@+id/country_name_tv"
                android:text="@string/recovers_title" />

            <TextView
                android:id="@+id/deaths_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimaryText"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/critical_title_tv"
                app:layout_constraintStart_toEndOf="@id/recovers_title_tv"
                app:layout_constraintTop_toBottomOf="@+id/country_name_tv"
                android:text="@string/deaths_title" />

            <TextView
                android:id="@+id/critical_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimaryText"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/today_cases_title_tv"
                app:layout_constraintStart_toEndOf="@id/deaths_title_tv"
                app:layout_constraintTop_toBottomOf="@+id/country_name_tv"
                android:text="@string/critical_title" />

            <TextView
                android:id="@+id/today_cases_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/today_cases_title"
                android:textColor="@color/colorPrimaryText"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/today_deaths_title_tv"
                app:layout_constraintStart_toEndOf="@id/critical_title_tv"
                app:layout_constraintTop_toBottomOf="@+id/country_name_tv" />

            <TextView
                android:id="@+id/today_deaths_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/today_deaths_title"
                android:textColor="@color/colorPrimaryText"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/today_cases_title_tv"
                app:layout_constraintTop_toBottomOf="@+id/country_name_tv" />

            <TextView
                android:id="@+id/cases_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorYellowText"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/cases_title_tv"
                app:layout_constraintStart_toStartOf="@id/cases_title_tv"
                app:layout_constraintTop_toBottomOf="@id/cases_title_tv"
                tools:text="0" />

            <TextView
                android:id="@+id/recovers_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorGreenText"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/recovers_title_tv"
                app:layout_constraintStart_toStartOf="@id/recovers_title_tv"
                app:layout_constraintTop_toBottomOf="@id/recovers_title_tv"
                tools:text="4" />

            <TextView
                android:id="@+id/deaths_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorRedText"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/deaths_title_tv"
                app:layout_constraintStart_toStartOf="@id/deaths_title_tv"
                app:layout_constraintTop_toBottomOf="@id/deaths_title_tv"
                tools:text="0" />

            <TextView
                android:id="@+id/critical_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorBlueText"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/critical_title_tv"
                app:layout_constraintStart_toStartOf="@id/critical_title_tv"
                app:layout_constraintTop_toBottomOf="@id/deaths_title_tv"
                tools:text="0" />

            <TextView
                android:id="@+id/today_cases_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorYellowText"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/today_cases_title_tv"
                app:layout_constraintStart_toStartOf="@id/today_cases_title_tv"
                app:layout_constraintTop_toBottomOf="@id/deaths_title_tv"
                tools:text="0" />

            <TextView
                android:id="@+id/today_deaths_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorRedText"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/today_deaths_title_tv"
                app:layout_constraintStart_toStartOf="@id/today_deaths_title_tv"
                app:layout_constraintTop_toBottomOf="@id/today_deaths_title_tv"
                tools:text="0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>